feat: Implement Cart, Order, OrderItem, and Product models with business logic and validations
- Added Cart model with methods for total price calculation and user cart management.
- Created Order model with comprehensive order management features and status transitions.
- Introduced OrderItem model to manage individual items within an order.
- Enhanced Product model with detailed attributes, validations, and instance methods.
- Established User model with improved validation, password hashing, and role management.
- Defined model relationships in a new index file.
- Updated package.json with necessary dependencies for the server.
- Created routes for cart and purchase management, while restructuring product routes.
- Added seed script for populating the database with demo data.
- Implemented utility functions for error handling and async error wrapping.
- Created setup scripts for easy environment setup and database initialization.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,151 @@
+# Dependencies
 node_modules/
-build/
-dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+yarn.lock
+
+# Environment variables
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Database
+*.sqlite
+*.sqlite3
+*.db
+
+# Logs
+logs
 *.log
+lerna-debug.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# nyc test coverage
+.nyc_output
+
+# Dependency directories
+jspm_packages/
+
+# TypeScript cache
+*.tsbuildinfo
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variables file
+.env.test
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# Next.js build output
+.next
+
+# Nuxt.js build / generate output
+.nuxt
+dist
+
+# Gatsby files
+.cache/
+public
+
+# Vite build output
+dist/
+build/
+
+# Rollup build output
+dist/
+
+# Storybook build outputs
+.out
+.storybook-out
+
+# Temporary folders
+tmp/
+temp/
+
+# Editor directories and files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# MySQL data directory (if running locally)
+mysql-data/
+
+# SSL certificates
+*.pem
+*.key
+*.crt
+*.cert
+
+# Backup files
+*.backup
+*.bak
+*.orig
+
+# Application specific
+uploads/
+public/uploads/
+server/uploads/
+client/dist/
+
+# Testing
+test-results/
+coverage/
+
+# Documentation build
+docs/_build/
+
+# Python (if any Python scripts)
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Local development files
+.local
+.vscode/settings.json
+
+# Build artifacts
+*.tar.gz
+*.zip
+
+# Cache
+.cache/
+.tmp/
