--- a/package.json
+++ b/package.json
@@ -1,5 +1,44 @@
 {
-  "name": "ecofinds-mvp",
-  "private": true,
-  "workspaces": ["client", "server"]
+  "name": "ecosearch",
+  "version": "2.0.0",
+  "description": "EcoFinds - Sustainable Marketplace Platform",
+  "main": "server/app.js",
+  "scripts": {
+    "start": "npm run start:server",
+    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
+    "dev:server": "cd server && npm run dev",
+    "dev:client": "cd client && npm run dev",
+    "start:server": "cd server && npm start",
+    "start:client": "cd client && npm run preview",
+    "build": "cd client && npm run build",
+    "install:all": "npm install && cd server && npm install && cd ../client && npm install",
+    "clean": "rm -rf node_modules server/node_modules client/node_modules",
+    "db:setup": "cd server && npm run db:setup",
+    "seed": "cd server && npm run seed",
+    "migrate": "cd server && npm run migrate",
+    "test": "cd server && npm test",
+    "test:watch": "cd server && npm run test:watch"
+  },
+  "keywords": [
+    "marketplace",
+    "sustainability",
+    "eco-friendly",
+    "express",
+    "react",
+    "mysql",
+    "sequelize"
+  ],
+  "author": "EcoFinds Team",
+  "license": "MIT",
+  "devDependencies": {
+    "concurrently": "^8.2.0"
+  },
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/virtuoso-04/ecosearch.git"
+  }
 }
