feat: Implement comprehensive authentication routes with JWT, rate limiting, and user profile management
feat: Add cart functionality with CRUD operations, including item addition, update, and removal

feat: Introduce order management routes for creating and retrieving user orders, including order item details

feat: Develop product routes for CRUD operations, filtering, and pagination, enhancing product search capabilities

refactor: Remove deprecated purchase routes and consolidate user-related operations into a dedicated users route

chore: Remove unused seed script and utility functions for error handling

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ecosearch",
+  "name": "ecofinds",
   "version": "2.0.0",
-  "description": "EcoFinds - Sustainable Marketplace Platform",
+  "description": "EcoFinds - Sustainable Second-Hand Marketplace",
   "main": "server/app.js",
   "scripts": {
     "start": "npm run start:server",
@@ -22,6 +22,8 @@
   "keywords": [
     "marketplace",
     "sustainability",
+    "second-hand",
+    "circular-economy",
     "eco-friendly",
     "express",
     "react",
