--- a/server/package.json
+++ b/server/package.json
@@ -1,43 +1,54 @@
 {
-  "name": "ecofinds-server",
-  "version": "2.0.0",
+  "name": "ecosearch-server",
+  "version": "1.0.0",
+  "description": "EcoSearch Backend API - Sustainable marketplace server",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "seed": "node scripts/seed.js",
-    "migrate": "npx sequelize-cli db:migrate",
-    "migrate:undo": "npx sequelize-cli db:migrate:undo",
     "test": "jest",
     "test:watch": "jest --watch",
-    "db:setup": "npm run migrate && npm run seed"
+    "migrate": "sequelize-cli db:migrate",
+    "migrate:undo": "sequelize-cli db:migrate:undo",
+    "seed": "sequelize-cli db:seed:all",
+    "seed:undo": "sequelize-cli db:seed:undo:all"
   },
+  "keywords": [
+    "marketplace",
+    "sustainability",
+    "ecommerce",
+    "express",
+    "nodejs",
+    "sequelize"
+  ],
+  "author": "EcoSearch Team",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "sequelize": "^6.32.1",
-    "mysql2": "^3.6.0",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
     "cors": "^2.8.5",
-    "morgan": "^1.10.0",
-    "express-validator": "^7.0.1",
-    "express-rate-limit": "^6.10.0",
     "helmet": "^7.0.0",
-    "dotenv": "^16.3.1",
-    "joi": "^17.9.2",
-    "express-async-errors": "^3.1.1",
+    "express-rate-limit": "^6.8.1",
     "compression": "^1.7.4",
-    "multer": "^1.4.5-lts.1",
+    "morgan": "^1.10.0",
+    "dotenv": "^16.3.1",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.1",
+    "sequelize": "^6.32.1",
+    "sqlite3": "^5.1.6",
+    "pg": "^8.11.1",
+    "pg-hstore": "^2.3.4",
     "slugify": "^1.6.6",
-    "uuid": "^9.0.0",
-    "moment": "^2.29.4",
-    "lodash": "^4.17.21"
+    "validator": "^13.9.0",
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.32.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
-    "jest": "^29.6.2",
+    "jest": "^29.6.1",
     "supertest": "^6.3.3",
-    "sequelize-cli": "^6.6.1",
-    "@faker-js/faker": "^8.0.2"
+    "sequelize-cli": "^6.6.1"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
