--- a/client/package.json
+++ b/client/package.json
@@ -8,10 +8,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.3.0",
+    "lucide-react": "^0.542.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.0",
-    "axios": "^1.3.0"
+    "react-router-dom": "^6.30.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
