--- a/server/package.json
+++ b/server/package.json
@@ -24,29 +24,29 @@
   "author": "EcoSearch Team",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "express-rate-limit": "^6.8.1",
-    "compression": "^1.7.4",
-    "morgan": "^1.10.0",
-    "dotenv": "^16.3.1",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.8.1",
+    "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.1",
-    "sequelize": "^6.32.1",
-    "sqlite3": "^5.1.6",
+    "morgan": "^1.10.0",
+    "multer": "^2.0.2",
     "pg": "^8.11.1",
     "pg-hstore": "^2.3.4",
+    "sequelize": "^6.32.1",
+    "sharp": "^0.32.4",
     "slugify": "^1.6.6",
-    "validator": "^13.9.0",
-    "multer": "^1.4.5-lts.1",
-    "sharp": "^0.32.4"
+    "sqlite3": "^5.1.7",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
     "jest": "^29.6.1",
-    "supertest": "^6.3.3",
-    "sequelize-cli": "^6.6.1"
+    "nodemon": "^3.0.1",
+    "sequelize-cli": "^6.6.1",
+    "supertest": "^6.3.3"
   },
   "engines": {
     "node": ">=16.0.0"
